fix splash background and webkit hide scrollbars

--- a/src/Styles/page.css
+++ b/src/Styles/page.css
@@ -3,7 +3,7 @@
 	flex-direction: row;
 	color: white;
 }
-.et-main.et-main--et-bg .et-page {
+.et-main.et-main--et-bg {
 	flex: 1 1 auto;
 	background-color: #5073ad;
 }
